--- a/index.html
+++ b/index.html
@@ -17,24 +17,17 @@ Select ONE Additional Feature to Add
 <html>
 
 <head>
-  <title>Project: Recipe book</title>
-  <meta charset="utf-8">
+ 
   <style>
   </style>
 </head>
 
 <body>
 
-  <h1>____'s Recipe Book</h1>
+  <h1>!Queen Jay's Recipe Book!</h1>
 
-  <h2>Contents:</h2>
-
-  <ol>
-    <li><a href="?">Recipe #1</a></li>
-  </ol>
-
-  <h2 id="?">Recipe #1</h2>
-
+  <h2>Contents</h2>
+    
   <ul>
     <li>Time: _</li>
     <li>Serves: _</li>
@@ -49,13 +42,23 @@ Select ONE Additional Feature to Add
     </thead>
     <tbody>
       <tr>
-        <td>Ingredient #1</td>
-        <td>Quantity #1</td>
+        <td>Oxtails</td>
+        <td>Handfull</td>
       </tr>
+      <td>rice</td>
+      <td>2 cups</td>
+    </tr>
+      <td>seasoning (jerk,obay,oxtail & etc</td>
+      <td>Until you feel the need to stop</td>
+      </tr>
+      <td>butter</td>
+      <td> 1 stick</td>
+      
+
     </tbody>
   </table>
 
-  <p><strong>Step 1:</strong> Do something.
+  <p><strong>Step 1:</strong> Do something
   </p>
 
   <p><em>Source: <a href="?">Some recipes websites</a></em></p>
