--- a/index.html
+++ b/index.html
@@ -52,16 +52,25 @@ Select ONE Additional Feature to Add
       <td>Until you feel the need to stop</td>
       </tr>
       <td>butter</td>
-      <td> 1 stick</td>
+      <td> 1 stick
+      </td>
       
 
     </tbody>
   </table>
 
-  <p><strong>Step 1:</strong> Do something
+  <p><strong>Step 1:</strong> Wash your hands.
   </p>
+  <p><strong> Step 2: wash the oxtails.</strong></p>
+  <p><strong>Step 3: season and oil the oxtails.</strong></p>
+  <p><strong>Step 4: Brown the oxtails and set the oil on heat medium.</strong></p>
+  <p><strong> Step 5: Set the oxtails aside, and began on the oxtail broth. Add broth, water, vegtables, and spices.</strong></p>
+<p><strong>Step 6: Add Oxtails to the flavorful pot of seasonings, butter and spices and let it boil for about 2 and 1/2 hours.</strong></p>
+<p><strong> Step 7:Began to add vetables like, onions , potatoes, and carrots to the pot with the oxtails.</strong></p>
+ <p><strong> Step 8:Boil rice adding sugar, and butter Gently stir oxtails evry 5 minutes.</strong></p>
+ <p><strong>Step 9: Serve the oxtails on the rice with broths on the rice and vegtables on the side. </strong></p>
 
-  <p><em>Source: <a href="?">Some recipes websites</a></em></p>
+ href="?">Some recipes websites https://www.lanascooking.com/oxtail-stew/</a></em></p>
 
 </body>
 
