--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Select ONE Additional Feature to Add
  <p><strong>Step 9: Serve the oxtails on the rice with broths on the rice and vegtables on the side. </strong></p>
 
  href="?">Some recipes websites https://www.lanascooking.com/oxtail-stew/</a></em></p>
-
+href="?">https://temeculablogs.com/oxtails-and-rice/</a></em></p>
 </body>
 
 </html>
