--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@ Select ONE Additional Feature to Add
 </head>
 
 <body>
+ <style>
+  body {
+    background-color: rgb(225, 166, 16);
+  }
+ </style>
+  </body>
 
-  <h1>!Queen Jay's Recipe Book!</h1>
+  <h1>style""!Queen Jay's Recipe Book!</h1>
 
   <h2>Contents</h2>
     
@@ -70,8 +76,10 @@ Select ONE Additional Feature to Add
  <p><strong> Step 8:Boil rice adding sugar, and butter Gently stir oxtails evry 5 minutes.</strong></p>
  <p><strong>Step 9: Serve the oxtails on the rice with broths on the rice and vegtables on the side. </strong></p>
 
- href="?">Some recipes websites https://www.lanascooking.com/oxtail-stew/</a></em></p>
+ href="?">Some recipes websites</a></em></p>
+ <a> href="https://www.lanascooking.com/oxtail-stew/"</a>
 href="?">https://temeculablogs.com/oxtails-and-rice/</a></em></p>
+
 </body>
 
 </html>
